--- a/project_synopsis.tex
+++ b/project_synopsis.tex
@@ -8,19 +8,27 @@
 \usepackage{booktabs}
 
 \title{Project synopsis}
-\author{Rasmus P. s164564, Luka A. s18,Christian P. s13}
+\author{Rasmus P. s164564, Luka A. s18,Christian P. s124267}
 \date{\today}
 
 
 
 \begin{document}
 \section*{motivation}
+Deep learning is to an increasing degree being used within all fields where data is a crucial part of gaining an advantage over your competitors. The financial business sector is a sector where deep learning can be used to a great extent, with potentially very high reward. 
+The potential gains by being able to create a neural network that can predict the revenue of a company somewhere in the future could make for better abilities in issuing loans, potential changes in company value etc.
 
 \section*{background}
 Predicting company revenue can help with investing.
+
+Creating and optimizing a neural network to succesfully forecast the revenue of a company given publicly accessible data. The forecast should work with a margin(confidence interval) of the forecast.
+
 \section*{milestones}
+Making a neural network that functions.
+Optimize on the network to achieve good predictions.
+Report the findings.
 
 \section*{references}
-
+https://towardsdatascience.com/predicting-probability-distributions-using-neural-networks-abef7db10eac
 
 \end{document}
