--- a/Scripts/network.ipynb
+++ b/Scripts/network.ipynb
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RecurrentNet(nn.Module):\n",
+    "class RecurrentNetSkip(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(RecurrentNet, self).__init__()\n",
     "        \n",
@@ -526,6 +526,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RecurrentNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(RecurrentNet, self).__init__()\n",
+    "        \n",
+    "        self.linearIn = nn.Sequential(nn.Linear(in_features=6,out_features=6),\n",
+    "                                      nn.ReLU(),\n",
+    "                                      nn.Linear(6,6)) \n",
+    "        self.rnn = nn.GRU(input_size=12,\n",
+    "                          hidden_size=50,\n",
+    "                          num_layers=3,\n",
+    "                          batch_first=True)\n",
+    "        self.linearOut = nn.Sequential(nn.Linear(in_features=50*3,out_features=50),\n",
+    "                                       nn.BatchNorm1d(50),\n",
+    "                                       nn.ReLU(),\n",
+    "                                       nn.Dropout(),\n",
+    "                                       nn.Linear(50,20),\n",
+    "                                       nn.ReLU(),\n",
+    "                                       nn.Dropout(),\n",
+    "                                       nn.Linear(20,1)) #change to 2 for predicting normal distribution\n",
+    "\n",
+    "        \n",
+    "    def forward(self, x): #x = [batch_size,3,6]\n",
+    "        x1 = self.linearIn(x[:,0,:]) #[batch_size,6]\n",
+    "        x2 = self.linearIn(x[:,1,:]) #[batch_size,6]\n",
+    "        x3 = self.linearIn(x[:,2,:]) #[batch_size,6]\n",
+    "        x1 = x1.unsqueeze(1) #[batch_size,1,6]\n",
+    "        x2 = x2.unsqueeze(1) #[batch_size,1,6]\n",
+    "        x3 = x3.unsqueeze(1) #[batch_size,1,6]     \n",
+    "        temp = []\n",
+    "        temp.append(x1)\n",
+    "        temp.append(x2)\n",
+    "        temp.append(x3)\n",
+    "        x = torch.cat(temp,dim=1) #[batch_size,3,6]\n",
+    "                                            \n",
+    "        x,_ = self.rnn(x) #[batch_size,3,50]\n",
+    "        \n",
+    "        x = x.reshape(x.shape[0],-1) #[batch_size,50*3]\n",
+    "                       \n",
+    "        x = self.linearOut(x) #[batch_size,1], [batch_size,2] if predicting normal distribution\n",
+    "        x = x.view(-1)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 133,
    "metadata": {},
    "outputs": [],
@@ -536,16 +585,16 @@
     "        \n",
     "        self.linear = nn.Sequential(nn.Linear(in_features=18,out_features=20),\n",
     "                                      nn.ReLU(),\n",
-    "                                      nn.Dropout(p=0.25),\n",
+    "                                      nn.Dropout(p=0.5),\n",
     "                                      nn.Linear(20,40),\n",
     "                                      nn.ReLU(),\n",
-    "                                      nn.Dropout(p=0.25),\n",
+    "                                      nn.Dropout(p=0.5),\n",
     "                                      nn.Linear(40,20),\n",
     "                                      nn.ReLU(),\n",
-    "                                      nn.Dropout(p=0.25),\n",
+    "                                      nn.Dropout(p=0.5),\n",
     "                                      nn.Linear(20,10),\n",
     "                                      nn.ReLU(),\n",
-    "                                      nn.Dropout(p=0.25),\n",
+    "                                      nn.Dropout(p=0.5),\n",
     "                                      nn.Linear(10,1))\n",
     "\n",
     "        \n",
@@ -1446,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
