commented out something

--- a/Scripts/network.ipynb
+++ b/Scripts/network.ipynb
@@ -2104,9 +2104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model1.state_dict(),\"linear_network_{}_features_{}_years\".format(features,years))\n",
-    "torch.save(model2.state_dict(),\"recurrent_network_{}_features_{}_years\".format(features,years))\n",
-    "torch.save(model3.state_dict(),\"recurrent_skip_network_{}_features_{}_years\".format(features,years))"
+    "#torch.save(model1.state_dict(),\"linear_network_{}_features_{}_years\".format(features,years))\n",
+    "#torch.save(model2.state_dict(),\"recurrent_network_{}_features_{}_years\".format(features,years))\n",
+    "#torch.save(model3.state_dict(),\"recurrent_skip_network_{}_features_{}_years\".format(features,years))"
    ]
   }
  ],
