commented out some lines that save stuff to avoid overwriting

--- a/Scripts/network.ipynb
+++ b/Scripts/network.ipynb
@@ -2039,7 +2039,7 @@
     "plt.title(\"Loss for linear network on medium companies\")\n",
     "plt.xlabel(\"epochs\")\n",
     "plt.ylabel(\"Average loss [DKK]\")\n",
-    "plt.savefig(\"../images/linear_loss_{}_features_{}_years_positive\".format(features,years))\n",
+    "# plt.savefig(\"../images/linear_loss_{}_features_{}_years_positive\".format(features,years))\n",
     "plt.show()"
    ]
   },
@@ -2069,7 +2069,7 @@
     "plt.title(\"Loss for recurrent network on medium companies\")\n",
     "plt.xlabel(\"epochs\")\n",
     "plt.ylabel(\"Average loss [DKK]\")\n",
-    "plt.savefig(\"../images/recurrent_loss_{}_features_{}_years_positive\".format(features,years))\n",
+    "# plt.savefig(\"../images/recurrent_loss_{}_features_{}_years_positive\".format(features,years))\n",
     "plt.show()"
    ]
   },
@@ -2099,7 +2099,7 @@
     "plt.title(\"Loss for recurrent network with skip-connections on medium companies\")\n",
     "plt.xlabel(\"epochs\")\n",
     "plt.ylabel(\"Average loss [DKK]\")\n",
-    "plt.savefig(\"../images/recurrentskip_loss_{}_features_{}_years_positive\".format(features,years))\n",
+    "# plt.savefig(\"../images/recurrentskip_loss_{}_features_{}_years_positive\".format(features,years))\n",
     "plt.show()"
    ]
   },
